force-app/main/default/objects/Insolvency__c/fields/Expected_Discharge_Month__c.field-meta.xml
<CustomField>
    <fullName>Expected_Discharge_Month__c</fullName>
    <description>Expected Discharge Months</description>
    <inlineHelpText>Expected Discharge Months</inlineHelpText>
    <label>Expected Discharge Months</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>21</fullName>
            </value>
            <value>
                <fullName>24</fullName>
            </value>
            <value>
                <fullName>36</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>