force-app/main/default/objects/Insolvency__c/fields/Expected_Final_R_D_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Final_R_D_Payment_Date__c</fullName>
    <description>Expected Final R &amp; D Payment Date</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Expected Final R &amp; D Payment Date</inlineHelpText>
    <label>Expected Final R &amp; D Payment Date</label>
    <type>Date</type>
</CustomField>