force-app/main/default/objects/Insolvency__c/fields/Expected_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Expected_Payment_Amount__c</fullName>
    <inlineHelpText>Expected Payment Amount</inlineHelpText>
    <label>Expected Payment Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>