force-app/main/default/objects/Insolvency__c/fields/Expenses__c.field-meta.xml
<CustomField>
    <fullName>Expenses__c</fullName>
    <description>Expenses</description>
    <inlineHelpText>Expenses</inlineHelpText>
    <label>Expenses</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>