force-app/main/default/objects/Insolvency__c/fields/Fairstone_Record_Owner__c.field-meta.xml
<CustomField>
    <fullName>Fairstone_Record_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fairstone Record Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>FairstoneRecordOwner</relationshipName>
    <type>Lookup</type>
</CustomField>