force-app/main/default/objects/Insolvency__c/fields/Flexiti_Record_Owner__c.field-meta.xml
<CustomField>
    <fullName>Flexiti_Record_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Flexiti Record Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>FlexitiRecordOwner</relationshipName>
    <type>Lookup</type>
</CustomField>