force-app/main/default/objects/Insolvency__c/fields/Follow_Up_Counter__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Counter__c</fullName>
    <description>This field will be default to zero and it will be incremented for each follow-up email sent.</description>
    <label>Follow Up Counter</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>