force-app/main/default/objects/Insolvency__c/fields/Follow_up_Email__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_Email__c</fullName>
    <formula>Trustee__r.Follow_up_Email__c</formula>
    <label>Follow-up Email</label>
    <type>Text</type>
</CustomField>