force-app/main/default/objects/Insolvency__c/fields/Food_Grocery_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Food_Grocery_Expenses__c</fullName>
    <description>Food Grocery Expenses</description>
    <inlineHelpText>Food Grocery Expenses</inlineHelpText>
    <label>Food Grocery Expenses</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>