force-app/main/default/objects/Insolvency__c/fields/Furniture_Contents_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Furniture_Contents_Expenses__c</fullName>
    <description>Furniture Contents Expenses</description>
    <inlineHelpText>Furniture Contents Expenses</inlineHelpText>
    <label>Furniture Contents Expenses</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>