force-app/main/default/objects/Insolvency__c/fields/Furniture_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Furniture_Expenses__c</fullName>
    <description>Furniture Expenses</description>
    <inlineHelpText>Furniture Expenses</inlineHelpText>
    <label>Furniture Expenses</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>