force-app/main/default/objects/Insolvency__c/fields/Further_Counter_With_BK__c.field-meta.xml
<CustomField>
    <fullName>Further_Counter_With_BK__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Further Counter With BK?</inlineHelpText>
    <label>Further Counter With BK?</label>
    <type>Checkbox</type>
</CustomField>