force-app/main/default/objects/Insolvency__c/fields/Gifts_Charitable_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Gifts_Charitable_Expenses__c</fullName>
    <description>Gifts Charitable Expenses</description>
    <inlineHelpText>Gifts Charitable Expenses</inlineHelpText>
    <label>Gifts Charitable Expenses</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>