force-app/main/default/objects/Insolvency__c/fields/Goeasy_Record_Owner__c.field-meta.xml
<CustomField>
    <fullName>Goeasy_Record_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Easyfinancial Record Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>GoeasyRecordOwner</relationshipName>
    <type>Lookup</type>
</CustomField>