force-app/main/default/objects/Insolvency__c/fields/Grooming_Toiletries_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Grooming_Toiletries_Expenses__c</fullName>
    <description>Grooming Toiletries Expenses</description>
    <inlineHelpText>Grooming Toiletries Expenses</inlineHelpText>
    <label>Grooming Toiletries Expenses</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>