force-app/main/default/objects/Insolvency__c/fields/Gross_Self_Employment_Income__c.field-meta.xml
<CustomField>
    <fullName>Gross_Self_Employment_Income__c</fullName>
    <description>Gross Self Employment Income</description>
    <inlineHelpText>Gross Self Employment Income</inlineHelpText>
    <label>Gross Self Employment Income</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>