force-app/main/default/objects/Insolvency__c/fields/Heating_Gas_Oil_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Heating_Gas_Oil_Expenses__c</fullName>
    <description>Heating Gas Oil Expenses</description>
    <inlineHelpText>Heating Gas Oil Expenses</inlineHelpText>
    <label>Heating Gas Oil Expenses</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>