force-app/main/default/objects/Insolvency__c/fields/Home_Assets__c.field-meta.xml
<CustomField>
    <fullName>Home_Assets__c</fullName>
    <description>The total sum value of all home assets, as originally noted in the creditor’s package.</description>
    <inlineHelpText>The total sum value of all home assets, as originally noted in the creditor’s package.</inlineHelpText>
    <label>Home Assets</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>