force-app/main/default/objects/Insolvency__c/fields/House_Expenses__c.field-meta.xml
<CustomField>
    <fullName>House_Expenses__c</fullName>
    <description>House Expenses</description>
    <inlineHelpText>House Expenses</inlineHelpText>
    <label>House Expenses</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>