force-app/main/default/objects/Insolvency__c/fields/Hydro_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Hydro_Expenses__c</fullName>
    <description>Hydro Expenses</description>
    <inlineHelpText>Hydro Expenses</inlineHelpText>
    <label>Hydro Expenses</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>