force-app/main/default/objects/Insolvency__c/fields/Insolvencies_in_Queue__c.field-meta.xml
<CustomField>
    <fullName>Insolvencies_in_Queue__c</fullName>
    <description>Insolvencies in Queue</description>
    <formula>CASE(Number_Of_Days_In_Current_Status__c, 
null, &apos;0-2 Days&apos;, 
0, &apos;0-2 Days&apos;, 
1, &apos;0-2 Days&apos;, 
2, &apos;0-2 Days&apos;, 
3, &apos;3-5 Days&apos;, 
4, &apos;3-5 Days&apos;, 
5, &apos;3-5 Days&apos;, 
6, &apos;5-10 Days&apos;, 
7, &apos;5-10 Days&apos;, 
8, &apos;5-10 Days&apos;, 
9, &apos;5-10 Days&apos;, 
10, &apos;5-10 Days&apos;, 
&apos;10+ Days&apos; 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Insolvencies in Queue</inlineHelpText>
    <label>Insolvencies in Queue</label>
    <type>Text</type>
</CustomField>