force-app/main/default/objects/Insolvency__c/fields/Insolvency_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Insolvency_Created_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description>The date this insolvency record was created.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The date this insolvency record was created.</inlineHelpText>
    <label>Created Date</label>
    <type>Date</type>
</CustomField>