force-app/main/default/objects/Insolvency__c/fields/Insolvency_Date__c.field-meta.xml
<CustomField>
    <fullName>Insolvency_Date__c</fullName>
    <description>The effective date of the insolvency filing as noted in the creditor’s package</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The effective date of the insolvency filing as noted in the creditor’s package</inlineHelpText>
    <label>Insolvency Date</label>
    <type>Date</type>
</CustomField>