force-app/main/default/objects/Insolvency__c/fields/Insolvency_Discharged_Date__c.field-meta.xml
<CustomField>
    <fullName>Insolvency_Discharged_Date__c</fullName>
    <description>The date that the insolvency was discharged, if applicable.</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <inlineHelpText>The date that the insolvency was discharged, if applicable.</inlineHelpText>
    <label>Discharge Date</label>
    <type>Date</type>
</CustomField>