force-app/main/default/objects/Insolvency__c/fields/Insolvency_Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Insolvency_Document_Type__c</fullName>
    <description>Insolvency Document Type</description>
    <inlineHelpText>Insolvency Document Type</inlineHelpText>
    <label>Insolvency Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Creditors Package</fullName>
            </value>
            <value>
                <fullName>Demand Notice</fullName>
            </value>
            <value>
                <fullName>Finals</fullName>
            </value>
            <value>
                <fullName>Interims</fullName>
            </value>
            <value>
                <fullName>Letter of Release</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>PoC Document</fullName>
            </value>
            <value>
                <fullName>Proof of Security</fullName>
            </value>
            <value>
                <fullName>Trustee dividend follow-up correspondence</fullName>
            </value>
            <value>
                <fullName>Account Statement</fullName>
                <isActive>false</isActive>
                <label>Account Statement</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>