force-app/main/default/objects/Insolvency__c/fields/Insolvency_Expected_Discharged_Date__c.field-meta.xml
<CustomField>
    <fullName>Insolvency_Expected_Discharged_Date__c</fullName>
    <description>The date that the insolvency is expected to be discharged, as applicable.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The date that the insolvency is expected to be discharged, as applicable.</inlineHelpText>
    <label>Expected Discharge Date</label>
    <type>Date</type>
</CustomField>