force-app/main/default/objects/Insolvency__c/fields/Insolvency_Owner__c.field-meta.xml
<CustomField>
    <fullName>Insolvency_Owner__c</fullName>
    <description>Insolvency Owner</description>
    <formula>CASE(
$Profile.Name,
&apos;SDA Community User&apos;, ( SDA_Record_Owner__r.FirstName + &apos; &apos; + SDA_Record_Owner__r.LastName),
&apos;SDA Community User Readonly&apos;, (SDA_Record_Owner__r.FirstName + &apos; &apos; + SDA_Record_Owner__r.LastName),
&apos;SDA Login Community User&apos;, (SDA_Record_Owner__r.FirstName + &apos; &apos; + SDA_Record_Owner__r.LastName),
&apos;SDA Login Community User Readonly&apos;, (SDA_Record_Owner__r.FirstName + &apos; &apos; + SDA_Record_Owner__r.LastName),
&apos;SPL Community User&apos;, (Chase_Record_Owner__r.FirstName + &apos; &apos; + Chase_Record_Owner__r.LastName),
&apos;SPL Community User Readonly&apos;, (Chase_Record_Owner__r.FirstName + &apos; &apos; + Chase_Record_Owner__r.LastName),
&apos;SPL Login Community User&apos;, (Chase_Record_Owner__r.FirstName + &apos; &apos; + Chase_Record_Owner__r.LastName),
&apos;SPL Login Community User Readonly&apos;, (Chase_Record_Owner__r.FirstName + &apos; &apos; + Chase_Record_Owner__r.LastName),
&apos;Scotia Bank Community User&apos;, (Scotia_Record_Owner__r.FirstName + &apos; &apos; + Scotia_Record_Owner__r.LastName) ,
&apos;Scotia Bank Community User Readonly&apos;, (Scotia_Record_Owner__r.FirstName + &apos; &apos; + Scotia_Record_Owner__r.LastName),
&apos;Scotia Bank Login Community User&apos;, (Scotia_Record_Owner__r.FirstName + &apos; &apos; + Scotia_Record_Owner__r.LastName),
&apos;Scotia Bank Login Community User Readonly&apos;, (Scotia_Record_Owner__r.FirstName + &apos; &apos; + Scotia_Record_Owner__r.LastName),
&apos;Fairstone Community User&apos;, (Fairstone_Record_Owner__r.FirstName + &apos; &apos; + Fairstone_Record_Owner__r.LastName),
&apos;Fairstone Community User Readonly&apos;, (Fairstone_Record_Owner__r.FirstName + &apos; &apos; + Fairstone_Record_Owner__r.LastName),
&apos;Goeasy Community User&apos;, (Goeasy_Record_Owner__r.FirstName + &apos; &apos; + Goeasy_Record_Owner__r.LastName),
&apos;Goeasy Community User Readonly&apos;, (Goeasy_Record_Owner__r.FirstName + &apos; &apos; + Goeasy_Record_Owner__r.LastName),
&apos;Canadian Tire Community User&apos;, (Canadian_Tire_Record_Owner__r.FirstName + &apos; &apos; + Canadian_Tire_Record_Owner__r.LastName),
(Owner:User.FirstName + &apos; &apos; + Owner:User.LastName))</formula>
    <inlineHelpText>Insolvency Owner</inlineHelpText>
    <label>Insolvency Owner</label>
    <type>Text</type>
</CustomField>