force-app/main/default/objects/Insolvency__c/fields/Insolvency_Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>Insolvency_Owner_Id__c</fullName>
    <formula>CASE( 
$Profile.Name, 
&apos;SDA Community User&apos;, (SDA_Record_Owner__c) , 
&apos;SDA Community User Readonly&apos;, (SDA_Record_Owner__c), 
&apos;SDA Login Community User&apos;, (SDA_Record_Owner__c), 
&apos;SDA Login Community User Readonly&apos;, (SDA_Record_Owner__c), 
&apos;SPL Community User&apos;, (Chase_Record_Owner__c) , 
&apos;SPL Community User Readonly&apos;, (Chase_Record_Owner__c), 
&apos;SPL Login Community User&apos;, (Chase_Record_Owner__c), 
&apos;SPL Login Community User Readonly&apos;, (Chase_Record_Owner__c), 
&apos;Scotia Bank Community User&apos;, (Scotia_Record_Owner__c) , 
&apos;Scotia Bank Community User Readonly&apos;, (Scotia_Record_Owner__c), 
&apos;Scotia Bank Login Community User&apos;, (Scotia_Record_Owner__c), 
&apos;Scotia Bank Login Community User Readonly&apos;, (Scotia_Record_Owner__c),
&apos;Fairstone Community User&apos;, (Fairstone_Record_Owner__c), 
(Owner:User.Id))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insolvency Owner Id</label>
    <type>Text</type>
</CustomField>