force-app/main/default/objects/Insolvency__c/fields/Insolvency_Process_Software__c.field-meta.xml
<CustomField>
    <fullName>Insolvency_Process_Software__c</fullName>
    <formula>Text(Trustee__r.Parent.Insolvency_Process_Software__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insolvency Process Software</label>
    <type>Text</type>
</CustomField>