force-app/main/default/objects/Insolvency__c/fields/Insolvency_Reason__c.field-meta.xml
<CustomField>
    <fullName>Insolvency_Reason__c</fullName>
    <inlineHelpText>Insolvency Reason</inlineHelpText>
    <label>Insolvency Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Covid- 19</fullName>
            </value>
            <value>
                <fullName>Separation / Divorce</fullName>
            </value>
            <value>
                <fullName>Job Loss</fullName>
            </value>
            <value>
                <fullName>Poor Financial Management</fullName>
            </value>
            <value>
                <fullName>Sickness / Health Reasons</fullName>
            </value>
            <value>
                <fullName>Large CRA bill</fullName>
            </value>
            <value>
                <fullName>Gambling</fullName>
            </value>
            <value>
                <fullName>Supporting Family</fullName>
            </value>
            <value>
                <fullName>lay off / Business failure</fullName>
            </value>
            <value>
                <fullName>Maternity leave</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>