force-app/main/default/objects/Insolvency__c/fields/Insolvency_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Insolvency_Received_Date__c</fullName>
    <description>The date that the creditor’s package was received.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The date that the creditor’s package was received.</inlineHelpText>
    <label>Received Date</label>
    <type>Date</type>
</CustomField>