force-app/main/default/objects/Insolvency__c/fields/Insolvency_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Insolvency_Record_Id__c</fullName>
    <description>Insolvency Record ID</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Insolvency Record ID</inlineHelpText>
    <label>Insolvency Record Id</label>
    <type>Text</type>
</CustomField>