force-app/main/default/objects/Insolvency__c/fields/Insolvency_Refused_Date__c.field-meta.xml
<CustomField>
    <fullName>Insolvency_Refused_Date__c</fullName>
    <description>The date that the insolvency was refused, if applicable.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The date that the insolvency was refused, if applicable.</inlineHelpText>
    <label>Refused Date</label>
    <type>Date</type>
</CustomField>