force-app/main/default/objects/Insolvency__c/fields/Insolvency_Status__c.field-meta.xml
<CustomField>
    <fullName>Insolvency_Status__c</fullName>
    <description>The status of this debtor’s current / most recent insolvency filing.</description>
    <inlineHelpText>The status of this debtor’s current / most recent insolvency filing.</inlineHelpText>
    <label>Insolvency Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Staging</fullName>
                <default>true</default>
                <label>Staging</label>
            </value>
            <value>
                <fullName>For Owner Review</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Annulled</fullName>
            </value>
            <value>
                <fullName>Discharged</fullName>
            </value>
            <value>
                <fullName>Conditional Discharge</fullName>
            </value>
            <value>
                <fullName>Refused</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Annulled - Filed New</fullName>
            </value>
            <value>
                <fullName>Refused – Filed New</fullName>
            </value>
            <value>
                <fullName>Withdrawn – Filed New</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>