force-app/main/default/objects/Insolvency__c/fields/Internet_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Internet_Expenses__c</fullName>
    <description>Monthly Internet expenses</description>
    <inlineHelpText>Monthly Internet expenses</inlineHelpText>
    <label>Internet Expenses</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>