force-app/main/default/objects/Insolvency__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <description>Indicates whether Trustee Office is active or not</description>
    <formula>Trustee__r.Is_Active__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates whether Trustee Office is active or not</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>