force-app/main/default/objects/Insolvency__c/fields/Is_Record_Locked__c.field-meta.xml
<CustomField>
    <fullName>Is_Record_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Record Locked</description>
    <inlineHelpText>Is Record Locked</inlineHelpText>
    <label>Is Record Locked</label>
    <type>Checkbox</type>
</CustomField>