force-app/main/default/objects/Insolvency__c/fields/Is_Spouse_Disclosing_Income__c.field-meta.xml
<CustomField>
    <fullName>Is_Spouse_Disclosing_Income__c</fullName>
    <formula>IF((Number_Of_Persons_In_Household__c - Number_Of_Persons_In_Household_Below_17__c) &gt; 1  &amp;&amp; Debtor_Portion_Of_Monthly_Income__c &lt; 1.0 &amp;&amp; NOT(ISBLANK(Total_Monthly_Income_Spouse__c)) || ( Number_Of_Persons_In_Household__c - Number_Of_Persons_In_Household_Below_17__c ) = 1,true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Is Spouse Disclosing Income</inlineHelpText>
    <label>Is Spouse Disclosing Income</label>
    <type>Checkbox</type>
</CustomField>