force-app/main/default/objects/Insolvency__c/fields/Laundry_Dry_Cleaning_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Laundry_Dry_Cleaning_Expenses__c</fullName>
    <description>Laundry Dry Cleaning Expenses</description>
    <inlineHelpText>Laundry Dry Cleaning Expenses</inlineHelpText>
    <label>Laundry Dry Cleaning Expenses</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>