force-app/main/default/objects/Insolvency__c/fields/Life_Insurance_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Life_Insurance_Expenses__c</fullName>
    <description>Life Insurance Expenses</description>
    <inlineHelpText>Life Insurance Expenses</inlineHelpText>
    <label>Life Insurance Expenses</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>