force-app/main/default/objects/Insolvency__c/fields/Maint_Payments_Or_Relinquishing__c.field-meta.xml
<CustomField>
    <fullName>Maint_Payments_Or_Relinquishing__c</fullName>
    <description>Customer Is Maintaining Payments Or Relinquishing</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Customer Is Maintaining Payments Or Relinquishing</inlineHelpText>
    <label>Maint Payments Or Relinquishing</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>