force-app/main/default/objects/Insolvency__c/fields/Manual_Approved_Reason__c.field-meta.xml
<CustomField>
    <fullName>Manual_Approved_Reason__c</fullName>
    <description>Voting decision is manually approved, then user have fill this information</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Reason for the manually approved voting decision</inlineHelpText>
    <label>Manual Approved Reason</label>
    <type>TextArea</type>
</CustomField>