force-app/main/default/objects/Insolvency__c/fields/Manual_Reject_Reason__c.field-meta.xml
<CustomField>
    <fullName>Manual_Reject_Reason__c</fullName>
    <description>Voting Automation manual reject reason</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Voting Automation manual reject reason</inlineHelpText>
    <label>Manual Reject Reason</label>
    <type>TextArea</type>
</CustomField>