force-app/main/default/objects/Insolvency__c/fields/Manual_Review_Reason__c.field-meta.xml
<CustomField>
    <fullName>Manual_Review_Reason__c</fullName>
    <description>Voting automation manual review reason</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Voting automation manual review reason</inlineHelpText>
    <label>Manual Review Reason</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>