force-app/main/default/objects/Insolvency__c/fields/Marketing_and_Offers_Consent__c.field-meta.xml
<CustomField>
    <fullName>Marketing_and_Offers_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Consent to the use of information for marketing purposes and offers from Canaccede</description>
    <inlineHelpText>Consent to the use of information for marketing purposes and offers from Canaccede</inlineHelpText>
    <label>Marketing and Offers Consent</label>
    <type>Checkbox</type>
</CustomField>