force-app/main/default/objects/Insolvency__c/fields/Max_Counter_Monthly_Payment__c.field-meta.xml
<CustomField>
    <fullName>Max_Counter_Monthly_Payment__c</fullName>
    <inlineHelpText>Max Counter Monthly Payment</inlineHelpText>
    <label>Max Counter Monthly Payment</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>