force-app/main/default/objects/Insolvency__c/fields/Max_Counter_Payout__c.field-meta.xml
<CustomField>
    <fullName>Max_Counter_Payout__c</fullName>
    <inlineHelpText>Max Counter Payout</inlineHelpText>
    <label>Max Counter Payout</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>