force-app/main/default/objects/Insolvency__c/fields/Max_Counter_Payout_AR__c.field-meta.xml
<CustomField>
    <fullName>Max_Counter_Payout_AR__c</fullName>
    <description>Max Counter Payout Adjusted Return</description>
    <inlineHelpText>Max Counter Payout Adjusted Return</inlineHelpText>
    <label>Max Counter Payout AR</label>
    <precision>13</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>