force-app/main/default/objects/Insolvency__c/fields/Max_Counter_Payout_TR__c.field-meta.xml
<CustomField>
    <fullName>Max_Counter_Payout_TR__c</fullName>
    <description>Max Counter Payout Total Return</description>
    <inlineHelpText>Max Counter Payout Total Return</inlineHelpText>
    <label>Max Counter Payout TR</label>
    <precision>13</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>