force-app/main/default/objects/Insolvency__c/fields/Min_Acceptable_Payout__c.field-meta.xml
<CustomField>
    <fullName>Min_Acceptable_Payout__c</fullName>
    <inlineHelpText>Min Acceptable Payout</inlineHelpText>
    <label>Min Acceptable Payout</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>