force-app/main/default/objects/Insolvency__c/fields/Min_Acceptable_Payout_AR__c.field-meta.xml
<CustomField>
    <fullName>Min_Acceptable_Payout_AR__c</fullName>
    <description>Min Acceptable Payout Adjusted Return</description>
    <inlineHelpText>Min Acceptable Payout Adjusted Return</inlineHelpText>
    <label>Min Acceptable Payout AR</label>
    <precision>13</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>