force-app/main/default/objects/Insolvency__c/fields/Min_Acceptable_Payout_TR__c.field-meta.xml
<CustomField>
    <fullName>Min_Acceptable_Payout_TR__c</fullName>
    <description>Min Acceptable Payout Total Return</description>
    <inlineHelpText>Min Acceptable Payout Total Return</inlineHelpText>
    <label>Min Acceptable Payout TR</label>
    <precision>13</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>