force-app/main/default/objects/Insolvency__c/fields/Missing_payment_Follow_Up_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Missing_payment_Follow_Up_Sent_Date__c</fullName>
    <description>Date when missing payment follow up reminder was sent to trustee</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date when missing payment follow up reminder was sent to trustee</inlineHelpText>
    <label>Missing Payment Follow-up Sent Date</label>
    <type>DateTime</type>
</CustomField>