force-app/main/default/objects/Insolvency__c/fields/MOC_Date__c.field-meta.xml
<CustomField>
    <fullName>MOC_Date__c</fullName>
    <description>Utilize this field to track the date when the meeting of creditors is being held on the proposal.
It will help to attend these meetings</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The creditors meeting is being held to discuss the proposal</inlineHelpText>
    <label>MOC Date</label>
    <type>Date</type>
</CustomField>