force-app/main/default/objects/Insolvency__c/fields/MOC_Notes__c.field-meta.xml
<CustomField>
    <fullName>MOC_Notes__c</fullName>
    <description>The fields to be populated for a report that needs to be worked for CTB.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Details/Outcome of MOC</inlineHelpText>
    <label>MOC Notes</label>
    <type>TextArea</type>
</CustomField>