force-app/main/default/objects/Insolvency__c/fields/MOC_Time__c.field-meta.xml
<CustomField>
    <fullName>MOC_Time__c</fullName>
    <description>The field is to be populated for a report that needs to be worked for CTB.</description>
    <inlineHelpText>Time the next MOC will take place</inlineHelpText>
    <label>MOC Time</label>
    <type>Time</type>
</CustomField>