force-app/main/default/objects/Insolvency__c/fields/Money_Mart_Record_Owner__c.field-meta.xml
<CustomField>
    <fullName>Money_Mart_Record_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Money Mart Record Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>MoneyMartRecordOwner</relationshipName>
    <type>Lookup</type>
</CustomField>