force-app/main/default/objects/Insolvency__c/fields/Monthly_Child_Care_Debtor__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Child_Care_Debtor__c</fullName>
    <description>Monthly Child Care Debtor</description>
    <inlineHelpText>Monthly Child Care Debtor</inlineHelpText>
    <label>Monthly Child Care Debtor</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>