force-app/main/default/objects/Insolvency__c/fields/Monthly_Child_Care_Other__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Child_Care_Other__c</fullName>
    <description>Monthly Child Care Other</description>
    <inlineHelpText>Monthly Child Care Other</inlineHelpText>
    <label>Monthly Child Care Other</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>