force-app/main/default/objects/Insolvency__c/fields/Monthly_Child_Care_Spouse__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Child_Care_Spouse__c</fullName>
    <description>Monthly Child Care Spouse</description>
    <inlineHelpText>Monthly Child Care Spouse</inlineHelpText>
    <label>Monthly Child Care Spouse</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>