force-app/main/default/objects/Insolvency__c/fields/Monthly_Child_Support_Payments_Debtor__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Child_Support_Payments_Debtor__c</fullName>
    <description>Monthly Child Support  Payments Debtor</description>
    <inlineHelpText>Monthly Child Support  Payments Debtor</inlineHelpText>
    <label>Monthly Child Support  Payments Debtor</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>